--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -234,6 +234,8 @@ jobs:
             -e INPUT_COMMENT_TITLE \
             -e INPUT_COMMENT_MODE \
             -e INPUT_FAIL_ON \
+            -e INPUT_ACTION_FAIL \
+            -e INPUT_ACTION_FAIL_ON_INCONCLUSIVE \
             -e INPUT_NUNIT_FILES \
             -e INPUT_XUNIT_FILES \
             -e INPUT_TRX_FILES \
