--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -523,8 +523,7 @@ jobs:
         uses: ./
         with:
           check_name: Test Results (Test Files)
-          fail_on: "test failures"
-          action_fail: true
+          fail_on: nothing
           junit_files: "test-files/junit-xml/**/*.xml"
           nunit_files: "test-files/nunit/**/*.xml"
           xunit_files: "test-files/xunit/**/*.xml"
